@startuml Sensor Service
title Sensor Service - Class Diagram

enum SensorType {
    temperature
}

class Sensor {
    +ID: int
    +RoomID: *int
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: string
    +CreatedAt: time.Time
    +UpdatedAt: time.Time
}

class SensorCreate {
    +RoomID: *int
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
}

class SensorUpdate {
    +Name: string
    +Type: SensorType
    +Manufacturer: string
    +Model: string
    +SerialNumber: string
    +FirmwareVersion: string
    +Status: string
}

class SensorHandler {
    <<Handler>>
    +DB: *db.DB
    +TemperatureService: *TemperatureService
    +RegisterRoutes(router: *gin.RouterGroup)
    +GetSensors()
    +GetSensorByID(id: int)
    +CreateSensor(data: SensorCreate)
    +UpdateSensor(id: int, data: SensorUpdate)
    +DeleteSensor(id: int)
    +UpdateSensorValue(id: int, value: float64, status: string)
    +GetTemperatureByLocation(location: string)
}

class TemperatureService {
    <<Service>>
    +BaseURL: string
    +HTTPClient: *http.Client
    +GetTemperature(location: string): *TemperatureResponse
    +GetTemperatureByID(sensorID: string): *TemperatureResponse
}

class DB {
    <<Repository>>
    +GetSensors(ctx): List<Sensor>
    +GetSensorByID(ctx, id): Sensor
    +CreateSensor(ctx, data): Sensor
    +UpdateSensor(ctx, id, data): Sensor
    +DeleteSensor(ctx, id): error
    +UpdateSensorValue(ctx, id, value, status): error
}

Sensor "1" -- "0..*" SensorType : has
SensorHandler --> DB : uses
SensorHandler --> TemperatureService : uses
DB ..> Sensor : maps to/from
SensorHandler ..> SensorCreate : binds from JSON
SensorHandler ..> SensorUpdate : binds from JSON

@enduml
